SF-963b Fix audio not available message on mobile viewport (#738)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-audio-player/checking-audio-player.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-audio-player/checking-audio-player.component.scss
@@ -18,8 +18,8 @@
     width: 100%;
     text-align: center;
     mdc-icon {
-      height: 1.25em;
-      vertical-align: middle;
+      font-size: 1em;
+      vertical-align: top;
     }
   }
 }
